# zuc-rs

./: Cargo.toml  LICENSE
src/: lib.rs  main.rs
src/bash/: encrypt_bash.rs  mod.rs
src/core/: algorithm.rs  cipher.rs  constant.rs  mod.rs  s-box.rs  zuc.rs
src/server/: encrypt_service.rs  mod.rs
