[package]
name = "zuc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.20", features=["default", "headers"] }
axum-extra = {version = "0.8"}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"